--- a/css/_layout.scss
+++ b/css/_layout.scss
@@ -1,8 +1,6 @@
 .container {
     margin: 0;
     padding: 0;
-    width: 100%;
-    overflow-x: hidden;
 }
 
 .hero {
